# conda-lock

./: .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .test_durations  .travis.yml  .travis.yml.old  404.html  CONTRIBUTING.md  Dockerfile  DockerfileTest  LICENSE  Makefile  README.md  codecov.yml  conda-linux-64-true.lock.yml  conda-lock.yml  conda_lock.py  dev-environment.yaml  github_deploy_key_mariusvniekerk_conda_lock.enc  index.html  mkdocs.yml  mypy.ini  netlify.toml  pixi.toml  pyproject.toml  pyrightconfig.json  renovate.json  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml  ty.toml
.github/: CODEOWNERS
.github/template-files/: config.yml
.github/workflows/: integration-test.yml  mkdocs.yml  pre-commit.yml  release.yaml  schema.yml  test.yml  typecheck.yml  update-lockfile.yaml  update.yml  zizmor.yaml
authenticated_channels/: index.html
basic_usage/: index.html
conda_lock/: __init__.py  __main__.py  _export_lock_spec_compute_platform_indep.py  _export_lockspec_compute_platform_indep.py  check_lockfile.py  click_helpers.py  common.py  conda_lock.py  conda_solver.py  content_hash.py  content_hash_types.py  default-virtual-packages.yaml  docker.py  errors.py  export_lock_spec.py  export_lockspec.py  invoke_conda.py  lockfile_metadata.py  lockfile_metadata_fields.py  lookup.py  lookup_cache.py  plugin.py  pypi_solver.py  tempdir_manager.py  virtual_package.py
conda_lock/_vendor/: LICENSES.md  README.md  cleo.pyi  conda.pyi  grayskull.pyi  poetry.pyi  requests_file.py  requests_file.pyi  vendor.txt
conda_lock/interfaces/: vendored_conda.py  vendored_grayskull.py  vendored_poetry.py  vendored_poetry_markers.py  vendored_requests_file.py
conda_lock/lockfile/: __init__.py  models.py
conda_lock/models/: __init__.py  channel.py  dry_run_install.py  lock_spec.py  package_source.py  pip_repository.py  test_channel.py
conda_lock/solver/: dry_run.py  graph_integrity.py  lockfile_heal.py  repodata_cache.py
conda_lock/src_parser/: __init__.py  aggregation.py  conda_common.py  environment_yaml.py  explicit.py  lockfile.py  markers.py  meta_yaml.py  poetry.py  pyproject_toml.py  requirements_txt.py  selectors.py
docker/: index.html
docs/: Makefile  authenticated_channels.md  basic_usage.md  docker.md  flags.md  getting_started.md  index.md  output.md  pip.md  pixi-migration.md  scipy-2023.md  src_environment_yml.md  src_meta_yaml.md  src_pyproject.md  walkthrough.md
docs/cli/: gen.md
docs/flags/: strip-auth.md
docs/source/: conf.py  index.rst
environments/: README.md  conda-lock-python-3.10.yaml  conda-lock-python-3.13.yaml  conda-lock-python-3.14.yaml  conda-lock-python-3.9.yaml  conda-lock.yml  dev-environment.yaml  python-3.10.yaml  python-3.13.yaml  python-3.14.yaml  python-3.9.yaml
environments/conda-lock-python-3.10/: conda-lock-python-3.10.yaml
environments/conda-lock-python-3.13/: conda-lock-python-3.13.yaml
environments/conda-lock-python-3.14/: conda-lock-python-3.14.yaml
environments/conda-lock-python-3.9/: conda-lock-python-3.9.yaml
example/pangeo/: conda-lock.yml  environment.yml
example/zlib/: conda-lock.yml
flags/: index.html
flags/strip-auth/: index.html
getting_started/: index.html
output/: index.html
pip/: index.html
pixi-migration/: index.html
scipy-2023/: index.html
scripts/: README.md  rerun_vendoring.sh  run_ty_via_micromamba.py
search/: search_index.json
src_environment_yml/: index.html
src_meta_yaml/: index.html
src_pyproject/: index.html
tests/: conftest.py  test_channel.py  test_check.py  test_checklock.py  test_conda_lock.py  test_conda_solver.py  test_constraints.py  test_extension_preservation_during_update.py  test_fixtures.py  test_local_pip_repository.py  test_lookup_cache.py  test_markers.py  test_package_source.py  test_pip_repositories.py  test_pixi_toml.py  test_regression.py  test_schema.py  test_tempdir_manager.py
tests/component/: test_graph_integrity.py  test_lockfile_heal.py
tests/durations/: README.md  macos-latest-py3.10.json  macos-latest-py3.13.json  macos-py3.10.json  macos-py3.12.json  macos-py3.8.json  ubuntu-latest-py3.10.json  ubuntu-latest-py3.13.json  ubuntu-py3.10.json  ubuntu-py3.12.json  ubuntu-py3.13.json  ubuntu-py3.8.json  windows-latest-py3.10.json  windows-latest-py3.13.json  windows-py3.12.json  windows-py3.13.json  windows-py3.9.json
tests/e2e/: test_corrupt_repodata_repro.py
tests/gdal/: environment.yml
tests/quetz/: dev_config.toml
tests/support/: corrupt_repodata.py  fixtures.py
tests/test-archspec/: virtual-packages.yaml
tests/test-channel-inversion/: environment.yaml
tests/test-conda-pip-conflict/: environment.yml
tests/test-corrupt-repodata/: .gitattributes  .gitignore  01-generate-sample-explicit-lockfile.py  02-reproduce-corrupt-repodata-via-upstream.py  02.Dockerfile  03-clobber-pkgs.py  04-run-conda-lock.sh  04-setup-editable.sh  04-test-conda-lock-with-pkgs.py  04.Dockerfile  05-render-explicit-lockfiles.py  05-test-update-with-corrupt-cache.py  README.md  lockfile-2.1.0-pkgs-lock-with-conda.yml  lockfile-2.1.0-pkgs-lock-with-mamba.yml  lockfile-2.1.0-pkgs.yml  lockfile-2.1.1-pkgs-lock-with-conda.yml  lockfile-2.1.1-pkgs-lock-with-mamba.yml  (+3 more)
tests/test-flit/: pyproject.toml
tests/test-pdm-default-pip/: pyproject.toml
tests/test-poetry/: pyproject.toml
tests/test-poetry-default-pip/: pyproject.toml
tests/test-poetry-git/: pyproject.toml
tests/test-poetry-git-subdir/: pyproject.toml
tests/test-poetry-ibis/: fetch.sh  pyproject.toml
tests/test-poetry-optional/: pyproject.toml
tests/test-poetry-path/: pyproject.toml
tests/test-poetry-path/fake-private-package-1.0.0/: PKG-INFO  setup.py
tests/test-pypi-resolve-gh290/pyproject/: pyproject.toml
tests/test-toml-channel/: pyproject.toml
tests/test-v2-to-v3-upgrade/: README.md  conda-lock-v2.5.8.yml  conda-lock-v2.yml  conda-lock-v3.0.2.yml  conda-lock-v3.0.3.yml  conda-lock-v3.yml  conda-lock.yml  dev-dependencies.yml  environment.yml  pyproject.toml  test-dependencies.yml  test_v2_to_v3_upgrade.py
(+447 files in other folders)
