[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "conda_lock"
description = "Lockfiles for conda"
authors = [
    { name = "Marius van Niekerk", email = "marius.v.niekerk@gmail.com" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]
license-files = { paths = ["LICENSE"] }
dependencies = [
    # conda-lock dependencies
    "click >=8.0",
    "click-default-group",
    "ensureconda >=1.4.4",
    "gitpython >=3.1.30",
    "jinja2",
    "pydantic >=1.10",
    "pyyaml >= 5.1",
    "setuptools",
    'tomli; python_version<"3.11"',
    "typing-extensions",
    # conda dependencies
    "ruamel.yaml",
    "toolz >=0.12.0,<1.0.0",
    # The following dependencies were added in the process of vendoring Poetry 1.1.15.
    # poetry:
    "cachecontrol[filecache] >=0.12.9",
    # poetry:
    "cachy >=0.3.0",
    # cleo, poetry:
    "clikit >=0.6.2",
    # poetry:
    "crashtest >=0.3.0",
    # poetry:
    "html5lib >=1.0",
    # poetry:
    "keyring >=21.2.0",
    # poetry:
    "packaging >=20.4",
    # poetry:
    "pkginfo >=1.4",
    # poetry, conda-lock:
    "requests >=2.18",
    # poetry:
    "tomlkit >=0.7.0",
    # poetry:
    "virtualenv >=20.0.26",
    # urllib3 is a dependency of requests and poetry, v2 removes some deprecated features that our vendored version of
    # poetry relies on.
    "urllib3 >=1.26.5,<2.0",
]

[project.scripts]
conda-lock = "conda_lock:main"

[project.urls]
Homepage = "https://github.com/conda/conda-lock"
Repository = "https://github.com/conda/conda-lock"
Documentation = "https://conda.github.io/conda-lock/"
"Issue Tracker" = "https://github.com/conda/conda-lock/issues"
"Conda-Forge Feedstock" = "https://github.com/conda-forge/conda-lock-feedstock"
"Anaconda.org" = "https://anaconda.org/conda-forge/conda-lock"

[tool]

[tool.check-manifest]
ignore = [
    "*.yml",
    ".coveragerc",
    "Makefile",
    "docs",
    "docs/*",
    "*.enc",
    "tests",
    "tests/*",
]

[tool.coverage.run]
omit = [
    "*/conda_lock/_vendor/*",
]
source = [
    "conda_lock/*",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
exclude = [
    "tests",
]

[tool.pytest.ini_options]
addopts = [
    "-rsx",
    "--verbose",
    "--doctest-modules",
    "--numprocesses=auto",
    "--ignore-glob=**/vendor_poetry/**",
    "--ignore-glob=**/_vendor/**"
]
flake8-max-line-length = 105
flake8-ignore = ["docs/* ALL", "conda_lock/_version.py ALL"]
filterwarnings = "ignore::DeprecationWarning"

[tool.vendoring]
destination = "conda_lock/_vendor"
namespace = "conda_lock._vendor"
requirements = "conda_lock/_vendor/vendor.txt"
protected-files = ["__init__.py", "README.md", "LICENSES.md", "vendor.txt"]
patches-dir = "conda_lock/scripts/vendor_poetry/patches"

[tool.vendoring.transformations]
drop = [
    "bin",
    "conda_env",
    # From cleo we only need cleo.io.io_mixin
    '^cleo\/(?!io$|io\/io_mixin\.py$).*$',
    "poetry/console",
    "poetry/publishing",
    "poetry/utils/shell.py",
    "poetry/core/_vendor/six.py",
    "poetry/core/_vendor/six.LICENSE",
]
substitute = [
    # simple substitution patch to fix conda.exports
    { match = 'conda\.base\.context', replace = 'conda_lock.vendor.conda.base.context' },
    { match = '"pypoetry"', replace = '"pypoetry-conda-lock"' },
    # Patch a syntax warning in conda_lock/_vendor/conda/_vendor/appdirs.py:82
    # (invalid escape sequence '\D')
    { match = '  """Return full path to the user-shared data dir', replace = '  r"""Return full path to the user-shared data dir' },
]

[tool.conda-lock]
channels = ["conda-forge", "nodefaults"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64", "osx-arm64", "linux-aarch64"]

[tool.conda-lock.dependencies]
# This is necessary to pull in the lockfile/filelock dependency
# since we don't handle the optional dependency.
cachecontrol-with-filecache = ">=0.12.9"


[tool.ruff]
target-version = "py38"
line-length = 88
extend-exclude = ["conda_lock/_vendor"]

[tool.ruff.lint]
ignore = [
    "E501",
    "F401",
    "F403",
    # Disabled during migration to Ruff:
    "A001",
    "A002",
    "A003",
    "C401",
    "C405",
    "C408",
    "C409",
    "C413",
    "C414",
    "C416",
    "RUF012",
    "RUF015",
]
select = [
    "A",  # flake8-builtins
    # "B",  # flake8-bugbear
    "B006",  # Do not use mutable data structures for argument defaults
    "C4",  # flake8-comprehensions
    "C9",  # mccabe
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "RUF",  # ruff rules
    "W",  # pycodestyle warnings
    "UP",  # pyupgrade
    "TID", # flake8-tidy-imports
    "A",  # flake8-builtins
    "BLE",  # flake8-blind-except
]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.isort]
lines-after-imports = 2
lines-between-types = 1
