[tool:pytest]
flake8-max-line-length = 105
flake8-ignore =
    docs/* ALL
    conda_lock/_version.py ALL

[metadata]
name = conda_lock
description = Lockfiles for conda
author = Marius van Niekerk
author_email = marius.v.niekerk@gmail.com
url = https://github.com/conda-incubator/conda-lock
long_description_content_type = text/markdown
long_description = file: README.md
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = True
install_requires =
    PyYaml >= 5.1
    requests >=2
    Jinja2
    toml
    ensureconda >=1.3
    click
    click-default-group
    pydantic >=1.8.1
python_requires = >=3.6
packages = find:
setup_requires =
    setuptools >= 41.2
    setuptools_scm

[options.extras_require]
pip_support = poetry ==1.1.*

[options.entry_points]
console_scripts =
    conda-lock = conda_lock:main

[sdist]
formats = gztar

[isort]
atomic=true
force_grid_wrap=0
include_trailing_comma=true
lines_after_imports=2
lines_between_types=1
multi_line_output=3
not_skip=__init__.py
use_parentheses=true
known_first_party=attr

[check-manifest]
ignore =
    *.yml
    .coveragerc
    Makefile
    docs
    docs/*
    *.enc
    tests
    tests/*
