[project]
name = "conda-lock-test-pdm"
authors = [{ name = "conda-lock", email = "conda-lock@conda-lock" }]
description = ""
requires-python = ">=3.7"
dependencies = [
  "requests >=2.13.0",
  "toml >=0.10",
  "tomlkit >=0.7",
]

[project.optional-dependencies]
cli = ["click >=7.0"]

[tool.pdm.dev-dependencies]
test = [
  "pytest >=5.1.0",
]

[tool.conda-lock]
channels = [
  "defaults",
]
default-non-conda-source = "pip"

[tool.conda-lock.dependencies]
certifi = ">=2019.11.28"
sqlite = ">=3.34"
