[tool.poetry]
name = "ibis-framework"
version = "5.1.0"
packages = [{ include = "ibis" }]
include = [
  "ibis/examples/*.json",
  "ibis/examples/*.txt",
  "ibis/examples/CITATIONS.md",
]
exclude = ["ibis/examples/gen_examples.R", "ibis/examples/gen_registry.py"]
homepage = "https://ibis-project.org"
repository = "https://github.com/ibis-project/ibis"
documentation = "https://ibis-project.org"
description = "Productivity-centric Python Big Data Framework"
authors = ["Ibis Contributors"]
maintainers = ["Ibis Contributors"]
license = "Apache-2.0"
readme = "README.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering",
]

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/ibis-project/ibis/issues"

[tool.poetry.dependencies]
python = "^3.8"
atpublic = ">=2.3,<4"
bidict = ">=0.22.1,<1"
importlib-resources = { version = ">=5,<6", python = "<3.9" }
multipledispatch = ">=0.6,<1"
numpy = ">=1,<2"
pandas = ">=1.2.5,<3"
parsy = ">=2,<3"
pooch = { version = ">=1.6.0,<2", extras = ["progress", "xxhash"] }
python-dateutil = ">=2.8.2,<3"
pytz = ">=2022.7"
rich = ">=12.4.4,<14"
sqlglot = ">=10.4.3,<12"
toolz = ">=0.11,<1"
typing-extensions = ">=4.3.0,<5"
black = { version = ">=22.1.0,<24", optional = true }
clickhouse-cityhash = { version = ">=1.0.2,<2", optional = true }
clickhouse-driver = { version = ">=0.1,<1", optional = true, extras = [
  "numpy",
] }
dask = { version = ">=2022.9.1", optional = true, extras = [
  "array",
  "dataframe",
] }
datafusion = { version = ">=0.6,<22", optional = true }
db-dtypes = { version = ">=0.3,<2", optional = true }
duckdb = { version = ">=0.3.3,<1", optional = true }
duckdb-engine = { version = ">=0.1.8,<1", optional = true }
fsspec = { version = ">=2022.1.0", optional = true }
GeoAlchemy2 = { version = ">=0.6.3,<1,!=0.13.0", optional = true }
geopandas = { version = ">=0.6,<1", optional = true }
google-cloud-bigquery = { version = ">=3,<4", optional = true }
google-cloud-bigquery-storage = { version = ">=2,<3", optional = true }
graphviz = { version = ">=0.16,<1", optional = true }
impyla = { version = ">=0.17,<1", optional = true }
lz4 = { version = ">=3.1.10,<5", optional = true }
packaging = { version = ">=21.3,<24", optional = true }
polars = { version = ">=0.14.18,<1", optional = true }
psycopg2 = { version = ">=2.8.4,<3", optional = true }
pyarrow = { version = ">=14.0.1", optional = true }
pymssql = { version = ">=2.2.5,<3", optional = true }
pydata-google-auth = { version = ">=1.4.0,<2", optional = true }
pydruid = { version = ">=0.6.5,<1", optional = true, extras = ["sqlalchemy"] }
pymysql = { version = ">=1,<2", optional = true }
pyspark = { version = ">=3,<4", optional = true }
# used to support posix regexen in the pandas, dask and sqlite backends
regex = { version = ">=2021.7.6", optional = true }
requests = { version = ">=2,<3", optional = true }
shapely = { version = ">=1.6,<1.8|>=1.9,<3", optional = true }
# include an explicit dependency on `snowflake-connector-python` because the
# lack of lower bound on this dependency as specified in `snowflake-sqlalchemy`
# appears to cause poetry's solver to get stuck
#
# also, we don't support arbitrarily old versions of this library
snowflake-connector-python = { version = ">=3.0.2,<4", optional = true }
snowflake-sqlalchemy = { version = ">=1.4.1,<2", optional = true }
sqlalchemy = { version = ">=1.4,<3", optional = true }
sqlalchemy-views = { version = ">=0.3.1,<1", optional = true }
trino = { version = ">=0.319,<1", optional = true, extras = ["sqlalchemy"] }

[tool.poetry.group.dev.dependencies]
black = ">=22.1.0,<24"
google-cloud-storage = ">=2.7.0,<3"
ipython = ">=7.27.0,<9"
poetry-dynamic-versioning = ">=0.18.0,<1"
pre-commit = ">=3.1,<4"
ruff = ">=0.0.205,<1"

[tool.poetry.group.test.dependencies]
aiohttp = ">=3.8.4,<4"
black = ">=22.1.0,<24"
filelock = ">=3.7.0,<4"
packaging = ">=21.3,<24"
pytest = ">=7.0.0,<8"
pytest-benchmark = ">=3.4.1,<5"
pytest-clarity = ">=1.0.1,<2"
pytest-cov = ">=3.0.0,<5"
pytest-mock = ">=3.6.1,<4"
pytest-profiling = ">=1.7.0,<2"
pytest-randomly = ">=3.10.1,<4"
pytest-repeat = ">=0.9.1,<0.10"
pytest-snapshot = ">=0.9.0,<1"
pytest-xdist = ">=2.3.0,<4"
hypothesis = ">=6.58.0,<7"
sqlalchemy = ">=1.4,<3"
pytest-httpserver = ">=1.0.5,<2"

[tool.poetry.group.docs.dependencies]
griffe = ">=0.25.3,<1"
ipykernel = ">=6,<7"
mkdocs = ">=1.2.3,<1.4.3"
mkdocs-exclude = ">=1.0.2,<2"
mkdocs-gen-files = ">=0.3.4,<0.5.0"
mkdocs-git-revision-date-localized-plugin = ">=1.1.0,<2"
mkdocs-jupyter = ">=0.24.1,<1"
mkdocs-literate-nav = ">=0.4.1,<1"
mkdocs-macros-plugin = ">=0.6.3,<1"
mkdocs-material = ">=8.2.1,<9.1.7"
mkdocstrings = ">=0.19.1,<1"
mkdocstrings-python = ">=0.8.3,<1"
requests = ">=2,<3"

[tool.poetry.extras]
# generate the `all` extra using nix run '.#gen-all-extras'
all = [
  "black",
  "clickhouse-cityhash",
  "clickhouse-driver",
  "dask",
  "datafusion",
  "db-dtypes",
  "duckdb",
  "duckdb-engine",
  "fsspec",
  "geoalchemy2",
  "geopandas",
  "google-cloud-bigquery",
  "google-cloud-bigquery-storage",
  "graphviz",
  "impyla",
  "lz4",
  "packaging",
  "polars",
  "psycopg2",
  "pyarrow",
  "pydata-google-auth",
  "pydruid",
  "pymssql",
  "pymysql",
  "pyspark",
  "regex",
  "requests",
  "shapely",
  "snowflake-connector-python",
  "snowflake-sqlalchemy",
  "sqlalchemy",
  "sqlalchemy-views",
  "trino",
]
bigquery = [
  "db-dtypes",
  "google-cloud-bigquery",
  "google-cloud-bigquery-storage",
  "pydata-google-auth",
]
clickhouse = ["clickhouse-driver", "clickhouse-cityhash", "lz4", "sqlalchemy"]
dask = ["dask", "pyarrow", "regex"]
datafusion = ["datafusion"]
druid = ["pydruid", "sqlalchemy"]
duckdb = [
  "duckdb",
  "duckdb-engine",
  "packaging",
  "pyarrow",
  "sqlalchemy",
  "sqlalchemy-views",
]
geospatial = ["geoalchemy2", "geopandas", "shapely"]
impala = ["fsspec", "impyla", "requests", "sqlalchemy"]
mssql = ["sqlalchemy", "pymssql", "sqlalchemy-views"]
mysql = ["sqlalchemy", "pymysql", "sqlalchemy-views"]
pandas = ["regex"]
polars = ["polars", "pyarrow"]
postgres = ["psycopg2", "sqlalchemy", "sqlalchemy-views"]
pyspark = ["pyarrow", "pyspark", "sqlalchemy"]
snowflake = [
  "snowflake-connector-python",
  "snowflake-sqlalchemy",
  "sqlalchemy-views",
]
sqlite = ["regex", "sqlalchemy", "sqlalchemy-views"]
trino = ["trino", "sqlalchemy", "sqlalchemy-views"]
# non-backend extras
visualization = ["graphviz"]
decompiler = ["black"]

[tool.poetry.plugins."ibis.backends"]
bigquery = "ibis.backends.bigquery"
clickhouse = "ibis.backends.clickhouse"
dask = "ibis.backends.dask"
datafusion = "ibis.backends.datafusion"
druid = "ibis.backends.druid"
duckdb = "ibis.backends.duckdb"
impala = "ibis.backends.impala"
mysql = "ibis.backends.mysql"
mssql = "ibis.backends.mssql"
pandas = "ibis.backends.pandas"
polars = "ibis.backends.polars"
postgres = "ibis.backends.postgres"
pyspark = "ibis.backends.pyspark"
snowflake = "ibis.backends.snowflake"
sqlite = "ibis.backends.sqlite"
trino = "ibis.backends.trino"

[tool.pytest.ini_options]
doctest_optionflags = [
  "NORMALIZE_WHITESPACE",
  "IGNORE_EXCEPTION_DETAIL",
  "ELLIPSIS",
]
xfail_strict = true
addopts = [
  "--strict-markers",
  "--strict-config",
  "--benchmark-disable",
  "--benchmark-group-by=name",
  "--benchmark-sort=name",
]
norecursedirs = [
  "**/snapshots",
  ".benchmarks",
  ".direnv",
  ".git",
  ".github",
  ".hypothesis",
  ".pytest_cache",
  ".streamlit",
  "LICENSES",
  "ci",
  "conda-lock",
  "dev",
  "docker",
  "docs",
  "nix",
  "result*",
]
filterwarnings = [
  # fail on any warnings that are not explicitly matched below
  "error",
  # pyspark and impala leave sockets open
  "ignore:Exception ignored in:",
  # dask
  "ignore:index is deprecated and will be removed in a future release:FutureWarning",
  "ignore:`meta` is not specified:UserWarning",
  "ignore:Concatenating dataframes with unknown divisions:UserWarning",
  "ignore:Possible nested set at position:FutureWarning",
  'ignore:\s+You did not provide metadata:UserWarning',
  # pandas
  "ignore:Boolean Series key will be reindexed:UserWarning",
  'ignore:Using \.astype to convert from timezone-(naive|aware) dtype:FutureWarning',
  "ignore:The default dtype for empty Series will be 'object':FutureWarning",
  # pandas 1.5.x
  "ignore:iteritems is deprecated and will be removed in a future version:FutureWarning",
  'ignore:Passing unit-less datetime64 dtype to \.astype is deprecated:FutureWarning',
  'ignore:The default value of numeric_only in DataFrameGroupBy\.sum is deprecated:FutureWarning',
  # numpy
  "ignore:Creating an ndarray from ragged nested sequences:",
  'ignore:`np\.bool` is a deprecated alias for the builtin `bool`:DeprecationWarning',
  # numpy, coming from a pandas call
  'ignore:In the future `np\.bool` will be defined as the corresponding NumPy scalar:FutureWarning',
  # duckdb-engine
  'ignore:Dialect .+ does \*not\* support Decimal:',
  "ignore:duckdb-engine doesn't yet support reflection on indices:",
  # druid
  'ignore:Dialect druid.rest will not make use of SQL compilation caching:',
  # ibis
  'ignore:`(Base)?Backend.database` is deprecated:FutureWarning',
  # ibis on postgres + windows
  "ignore:locale specific date formats:UserWarning",
  # spark
  "ignore:distutils Version classes are deprecated:DeprecationWarning",
  "ignore:The distutils package is deprecated and slated for removal:DeprecationWarning",
  "ignore:In Python .*, it is preferred .* type hints .* UDF:UserWarning",
  "ignore:`np.object` is a deprecated alias for the builtin `object`:DeprecationWarning",
  # windows
  "ignore:getargs.* The 'u' format is deprecated:DeprecationWarning",
  # sqlalchemy
  "ignore:Class ST_.+ will not make use of SQL compilation caching:",
  "ignore:UserDefinedType Geometry:",
  # google
  "ignore:Deprecated call to `pkg_resources\\.declare_namespace\\('google.*'\\):DeprecationWarning",
  # pyspark on python 3.11
  "ignore:typing\\.io is deprecated:DeprecationWarning",
  # warnings from google's use of the cgi module
  "ignore:'cgi' is deprecated and slated for removal in Python 3\\.13:DeprecationWarning",
  # warnings from google's use of pkg_resources
  "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
  # sqlalchemy warns about mysql's inability to cast to bool;
  # this has no effect on ibis's output because we convert types after
  # execution
  "ignore:Datatype BOOL does not support CAST on MySQL/MariaDB; the cast will be skipped:sqlalchemy.exc.SAWarning",
]
empty_parameter_set_mark = "fail_at_collect"
markers = [
  "backend: tests specific to a backend",
  "benchmark: benchmarks",
  "core: tests that do not required a backend",
  "examples: tests that exercise examples",
  "geospatial: tests for geospatial functionality",
  "hdfs: Hadoop file system tests",
  "min_version: backend tests that require a specific version of a dependency to pass",
  "min_server_version: backend tests that require a specific version of a backend's server to pass",
  "xfail_version: backend tests that for a specific version of a dependency",
  "notimpl: functionality that isn't implemented in ibis",
  "notyet: for functionality that isn't implemented in a backend",
  "never: tests for functionality that a backend is likely to never implement",
  "broken: test has exposed existing broken functionality",
  "sqlalchemy_only: tests for SQLAlchemy based backends",
  "bigquery: BigQuery tests",
  "clickhouse: ClickHouse tests",
  "dask: Dask tests",
  "datafusion: Apache Datafusion tests",
  "druid: Apache Druid tests",
  "duckdb: DuckDB tests",
  "impala: Apache Impala tests",
  "mysql: MySQL tests",
  "mssql: MS SQL Server tests",
  "pandas: Pandas tests",
  "polars: Polars tests",
  "postgres: PostgreSQL tests",
  "pyspark: PySpark tests",
  "snowflake: Snowflake tests",
  "sqlite: SQLite tests",
  "trino: Trino tests",
]

[tool.black]
line_length = 88
skip_string_normalization = true
extend_exclude = '\.ipynb|\.direnv|result(-\d+)|_py310\.py|decompiled\.py'

[tool.conda-lock]
channels = ["conda-forge"]

[tool.conda-lock.dependencies]
# conda-lock doesn't map dependencies' extras to conda-forge packages and we
# use the array and dataframe extras from dask
dask = ">=2021.10.0"
pip = "*"

[tool.coverage.run]
branch = true
source = ["ibis"]

[tool.coverage.report]
exclude_lines = [
  "if self.debug:",
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
ignore_errors = true
omit = [
  "*_version.py",
  "*tests*",
  "ibis/interactive.py",
  "ibis/examples/gen_registry.py",
]

[tool.distutils.bdist_wheel]
# universal = true is for projects that support py2 and py3, and do not have C
# extensions
universal = false

[tool.poetry-dynamic-versioning]
enable = true
dirty = true
style = "semver"
pattern = '^(?P<base>\d+(\.\d+)*)'

[build-system]
requires = ["poetry-core>=1.1.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
