[tool.poetry]
name = "conda-lock-test-poetry-optional"
version = "0.0.1"
description = ""
authors = ["conda-lock"]

[tool.poetry.dependencies]
python = "^3.7"
toml = ""
# Checking `optional = true` but not in extra
tomlkit = { version = "", optional = true }
# Checking extra but `optional = true` not specified
requests = "^2.13.0"

[tool.poetry.dev-dependencies]
# Checking `optional = true` but not in dependencies
pytest = { version = "~5.1.0", optional = true }
# Checking extra but not in dependencies
pyyaml = ""

[tool.poetry.extras]
rest = ["requests"]
yaml = ["pyyaml"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.conda-lock]
platforms = ["osx-arm64"]
channels = ["conda-forge"]
