[tool.poetry]
name = "conda-lock-test-poetry"
version = "0.0.1"
description = ""
authors = ["conda-lock"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "~5.1.0"
fake-private-package = { path = "./fake-private-package-1.0.0" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"