[tool.poetry]
name = "conda-lock-test-poetry"
version = "0.0.1"
description = ""
authors = ["conda-lock"]

[tool.poetry.dependencies]
requests = "^2.13.0"
toml = ">=0.10"

[tool.poetry.dev-dependencies]
pytest = "~5.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.conda-lock]
channels = [
    'defaults'
]

[tool.conda-lock.dependencies]
sqlite = "<3.34"
certifi = ">=2019.11.28"
